@@ -764,6 +764,20 @@ project(Compiler_Features_28_Test) : acetest {
   }
 }
 
+project(Compiler_Features_29_Test) : acetest {
+  exename = Compiler_Features_29_Test
+  Source_Files {
+    Compiler_Features_29_Test.cpp
+  }
+}
+
+project(Compiler_Features_30_Test) : acetest {
+  exename = Compiler_Features_30_Test
+  Source_Files {
+    Compiler_Features_30_Test.cpp
+  }
+}
+
 project(Config Test) : acetest {
   avoids += ace_for_tao
   exename = Config_Test
